Fixed:Overflow-hidden

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 body {
   display: flex;
-  overflow:auto;
+  overflow:hidden;
 }
 /*  --Menu bar--  */
 .sidebar {
